sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:16: error: ';' expected but identifier found.
  } while (gap>1)||(i>0)
                 ^